<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="25dp"
    tools:context="com.example.thecore.ahmadbahri_1202150111_modul1.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/judul1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/dinner"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/judul2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/judul1"
        android:text="@string/milea"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/judul2"
        android:layout_marginTop="40dp"
        android:hint="@string/menu"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/menu"
        android:hint="@string/portion"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/location" />

    <Button
        android:id="@+id/buttonEb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:onClick="clickEatbus"
        android:text="@string/eatbus" />

    <Button
        android:id="@+id/ButtonUn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_marginStart="166dp"
        android:layout_marginLeft="166dp"
        android:onClick="clickUpnormal"
        android:text="@string/upnormal" />

    <TextView
        android:id="@+id/saldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/judul2"
        android:layout_marginTop="11dp"
        android:textAlignment="center" />
</RelativeLayout>
