<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="25dp"
    android:orientation="vertical"
    tools:context="com.example.thecore.ahmadbahri_1202150111_modul1.MainActivity">

    <TextView
        android:id="@+id/judul1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/dinner"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/judul2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/judul1"
        android:text="@string/milea"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hasilTempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/judul2"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hasilTempat"
        android:layout_marginTop="15dp"
        android:text="@string/menu2"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/hasilMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/menu"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/porsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hasilMenu"
        android:layout_marginTop="17dp"
        android:text="@string/porsi"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/hasilPorsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/porsi"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hasilPorsi"
        android:layout_marginTop="21dp"
        android:text="@string/harga"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/hasilHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/harga"
        android:textAlignment="center"
        android:textSize="20sp" />
</RelativeLayout>
